--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <style>
 	<style type="text/css" scoped>
 #text666 {
-    color: #FF6E91;
+    color: #ff914e;
     font-family: 'Baloo', cursive;
     font-size: 1.625em;
     line-height: 1.125;
@@ -55,7 +55,7 @@
   background-color: white;
   padding: 20px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-  border: 5px solid #FF6E91; /* Add a pink border */
+  border: 5px solid #ff914e; /* Add a pink border */
   z-index: 1001;
   transition: opacity 0.3s, transform 0.3s, border-color 0.3s; /* Include border-color transition */
 font-family: 'Baloo', cursive;
@@ -143,6 +143,7 @@ font-family: 'Baloo', cursive;
 		min-width: 320px;
 		overflow-x: hidden;
 		word-wrap: break-word;
+		/* fundo do site inteiro, WALLPAPER */
 	}body:before {
 		content: '';
 		display: block;
@@ -158,7 +159,7 @@ font-family: 'Baloo', cursive;
 		background-image: url('data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20512%20512%22%20width%3D%22512%22%20height%3D%22512%22%20preserveAspectRatio%3D%22none%22%3E%20%3Cstyle%3E%20path%20%7B%20fill%3A%20none%3B%20stroke-linecap%3A%20round%3B%20stroke-width%3A%209.01px%3B%20stroke%3A%20rgba(255,255,255,0.149)%3B%20vector-effect%3A%20non-scaling-stroke%3B%20%7D%20%3C%2Fstyle%3E%20%3Cpath%20d%3D%22M284-8l200%2C264%20M284%2C520l200-264%22%20%2F%3E%20%3Cpath%20d%3D%22M28-8l200%2C264%20M28%2C520l200-264%22%20%2F%3E%3C%2Fsvg%3E'), linear-gradient(180deg, rgba(255,255,255,0.831) 19%, rgba(255,110,145,0.161) 100%), /*savepage-url=assets/images/bg.gif?v=2aee6d0c*/ var(--savepage-url-7);
 		background-size: 47px, cover, 10rem;
 		background-position: center, 0% 0%, center;background-repeat: repeat, repeat, repeat;
-		background-color: #FF6E91;
+		background-color: #ff914e;
 	}:root {--background-height: 100vh;--site-language-alignment: left;--site-language-direction: ltr;--site-language-flex-alignment: flex-start;--site-language-indent-left: 1;--site-language-indent-right: 0;--viewport-height: 100vh;}
 	html {font-size: 18pt;}
 	u {text-decoration: underline;}
@@ -404,8 +405,8 @@ font-family: 'Baloo', cursive;
 		font-size: 3.875em;
 		line-height: 1.25;
 		font-weight: 400;
-		-webkit-text-stroke: 0.05em #FF6E91;
-		text-stroke: 0.05em #FF6E91;
+		-webkit-text-stroke: 0.05em #ff914e;
+		text-stroke: 0.05em #ff914e;
 	}
 	#text01 a 
 	{
@@ -421,7 +422,7 @@ font-family: 'Baloo', cursive;
 	}
 	#text21 
 	{
-		color: #FF6E91;
+		color: #ff914e;
 		font-family: 'Baloo', cursive;
 		font-size: 1.625em;
 		line-height: 1.125;
@@ -443,7 +444,7 @@ font-family: 'Baloo', cursive;
 	}
 	#text06 
 	{
-		color: #FF6E91;
+		color: #ff914e;
 		font-family: 'Baloo', cursive;font-size: 2.625em;
 		line-height: 1.125;
 		font-weight: 400;
@@ -486,7 +487,7 @@ font-family: 'Baloo', cursive;
 	}
 	#text15 
 	{
-		color: #FF6E91;
+		color: #ff914e;
 		font-family: 'Baloo', cursive;
 		font-size: 1.625em;
 		line-height: 1.125;
@@ -568,7 +569,7 @@ font-family: 'Baloo', cursive;
 	}
 	#text18 
 	{
-		color: #FF6E91;
+		color: #ff914e;
 		font-family: 'Baloo', cursive;
 		font-size: 1.625em;
 		line-height: 1.125;
@@ -590,7 +591,7 @@ font-family: 'Baloo', cursive;
 	}
 	#text22 
 	{
-		color: #FF6E91;
+		color: #ff914e;
 		font-family: 'Baloo', cursive;
 		font-size: 0.875em;
 		line-height: 1.125;
@@ -612,7 +613,7 @@ font-family: 'Baloo', cursive;
 	}
 	#text25 
 	{
-		color: #FF6E91;
+		color: #ff914e;
 		font-family: 'Baloo', cursive;
 		font-size: 2.625em;line-height: 0.75;
 		font-weight: 400;
@@ -633,7 +634,7 @@ font-family: 'Baloo', cursive;
 	}
 	#text11 
 	{
-		color: #FF6E91;
+		color: #ff914e;
 		font-family: 'Baloo', cursive;
 		font-size: 2em;
 		line-height: 1.125;
@@ -655,7 +656,7 @@ font-family: 'Baloo', cursive;
 	}
 	#text13 
 	{
-		color: #FF6E91;
+		color: #ff914e;
 		font-family: 'Baloo', cursive;
 		letter-spacing: -0.025rem;
 		width: 100%;
@@ -678,7 +679,7 @@ font-family: 'Baloo', cursive;
 	}
 	#text03 
 	{
-		color: #FF6E91;
+		color: #ff914e;
 		font-family: 'Baloo', cursive;
 		font-size: 2.25em;
 		line-height: 1.75;
@@ -700,7 +701,7 @@ font-family: 'Baloo', cursive;
 	}
 	#text27 
 	{
-		color: #FF6E91;
+		color: #ff914e;
 		font-family: 'Baloo', cursive;
 		font-size: 1.625em;
 		line-height: 2.5;
@@ -722,7 +723,7 @@ font-family: 'Baloo', cursive;
 	}
 	#text08 
 	{
-		color: #FF6E91;
+		color: #ff914e;
 		font-family: 'Baloo', cursive;
 		font-size: 2em;
 		line-height: 1.25;
@@ -742,7 +743,7 @@ font-family: 'Baloo', cursive;
 	{
 		margin-top: 1rem;
 	}
-	#text09 {color: #FF6E91;
+	#text09 {color: #ff914e;
 		font-family: 'Baloo', cursive;
 		font-size: 1.375em;
 		line-height: 1.125;
@@ -766,7 +767,7 @@ font-family: 'Baloo', cursive;
 		
 	#text02 
 		{
-			color: #FF6E91;
+			color: #ff914e;
 			font-family: 'Baloo', cursive;
 			font-size: 1.625em;
 			line-height: 1.125;
@@ -788,7 +789,7 @@ font-family: 'Baloo', cursive;
 		}
 		#text26 
 		{
-			color: #FF6E91;
+			color: #ff914e;
 			font-family: 'Baloo', cursive;
 			font-size: 1.75em;
 			line-height: 1.125;
@@ -810,7 +811,7 @@ font-family: 'Baloo', cursive;
 		}
 		#text14 
 		{
-			color: #FF6E91;
+			color: #ff914e;
 			font-family: 'Baloo', cursive;
 			font-size: 2.25em;
 			line-height: 0.75;
@@ -928,7 +929,7 @@ font-family: 'Baloo', cursive;
 		}
 		#text10 
 		{
-			color: #FF6E91;
+			color: #ff914e;
 			font-family: 'Baloo', cursive;
 			font-size: 1.625em;
 			line-height: 1.25;
@@ -950,7 +951,7 @@ font-family: 'Baloo', cursive;
 		}
 		#text17 
 		{
-			color: #FF6E91;
+			color: #ff914e;
 			font-family: 'Baloo', cursive;
 			font-size: 1.75em;
 			line-height: 1.25;
@@ -972,7 +973,7 @@ font-family: 'Baloo', cursive;
 		}
 		#text16 
 		{
-			color: #FF6E91;
+			color: #ff914e;
 			font-family: 'Baloo', cursive;
 			font-size: 1.375em;
 			line-height: 1.25;
@@ -993,7 +994,7 @@ font-family: 'Baloo', cursive;
 			margin-top: 0.5rem;
 		}
 		#text23 {
-			color: #FF6E91;
+			color: #ff914e;
 			font-family: 'Baloo', cursive;
 			font-size: 1.75em;
 			line-height: 1.25;
@@ -1068,10 +1069,10 @@ font-family: 'Baloo', cursive;
 		}
 		#buttons01 .button 
 		{
-			background-color: #FF6E91;
+			background-color: #ff914e;
 			color: #FFFFFF;
 		}
-		#buttons01 .button:hover {background-color: #FF82A0 !important;
+		#buttons01 .button:hover {background-color: #ff9f63 !important;
 		}
 		#buttons01 li a:hover 
 		{
@@ -1126,12 +1127,12 @@ font-family: 'Baloo', cursive;
 		}
 		#buttons10 .button 
 		{
-			background-color: #FF6E91;
+			background-color: #ff914e;
 			color: #FFFFFF;
 		}
 		#buttons10 .button:hover 
 		{
-			background-color: #FF82A0 !important;
+			background-color: #ff9f63 !important;
 		}
 		#buttons10 li a:hover 
 		{
@@ -1143,12 +1144,12 @@ font-family: 'Baloo', cursive;
 		}
 		#buttons10 .n01 
 		{
-			background-color: #FF6E91;
+			background-color: #ff914e;
 			color: #FFFFFF;
 		}
 		#buttons10 .n01:hover 
 		{
-			background-color: #FF82A0 !important;
+			background-color: #ff9f63 !important;
 		}
 		#buttons06 
 		{
@@ -1183,12 +1184,12 @@ font-family: 'Baloo', cursive;
 		}
 		#buttons06 .button 
 		{
-			background-color: #FF6E91;
+			background-color: #ff914e;
 			color: #FFFFFF;
 		}
 		#buttons06 .button:hover 
 		{
-			background-color: #FF82A0 !important;
+			background-color: #ff9f63 !important;
 		}
 		#buttons06 li a:hover 
 		{
@@ -1227,12 +1228,12 @@ font-family: 'Baloo', cursive;
 		}
 		#buttons07 .button 
 		{
-			background-color: #FF6E91;
+			background-color: #ff914e;
 			color: #FFFFFF;
 		}
 		#buttons07 .button:hover 
 		{
-			background-color: #FF82A0 !important;
+			background-color: #ff9f63 !important;
 		}
 		#buttons07 li a:hover 
 		{
@@ -1271,12 +1272,12 @@ font-family: 'Baloo', cursive;
 		}
 		#buttons08 .button 
 		{
-			background-color: #FF6E91;
+			background-color: #ff914e;
 			color: #FFFFFF;
 		}
 		#buttons08 .button:hover 
 		{
-			background-color: #FF82A0 !important;
+			background-color: #ff9f63 !important;
 		}
 		#buttons08 li a:hover 
 		{
@@ -1642,12 +1643,12 @@ font-family: 'Baloo', cursive;
 		}
 		#buttons11 .button 
 		{
-			background-color: #FF6E91;
+			background-color: #ff914e;
 			color: #FFFFFF;
 		}
 		#buttons11 .button:hover 
 		{
-			background-color: #FF82A0 !important;
+			background-color: #ff9f63 !important;
 		}
 		#buttons11 li a:hover 
 		{
@@ -1659,12 +1660,12 @@ font-family: 'Baloo', cursive;
 		}
 		#buttons11 .n01 
 		{
-			background-color: #FF6E91;
+			background-color: #ff914e;
 			color: #FFFFFF;
 		}
 		#buttons11 .n01:hover 
 		{
-			background-color: #FF82A0 !important;
+			background-color: #ff9f63 !important;
 		}
 		#header 
 		{
@@ -1718,7 +1719,7 @@ font-family: 'Baloo', cursive;
 			display: inline-block;
 			width: 38rem;
 			background-color: #FFFFFF;
-			border-color: #FF6E91;
+			border-color: #ff914e;
 			border-style: solid;
 			border-width: 6px;
 			border-radius: 0rem;
@@ -1848,7 +1849,7 @@ font-family: 'Baloo', cursive;
 			display: inline-block;
 			width: 38rem;
 			background-color: #FFFFFF;
-			border-color: #FF6E91;
+			border-color: #ff914e;
 			border-style: solid;
 			border-top-width: 6px;
 			border-left-width: 6px;
@@ -1982,7 +1983,7 @@ font-family: 'Baloo', cursive;
 			display: inline-block;
 			width: 38rem;
 			background-color: #FFFFFF;
-			border-color: #FF6E91;
+			border-color: #ff914e;
 			border-style: solid;
 			border-left-width: 6px;
 			border-right-width: 6px;
@@ -2130,7 +2131,7 @@ font-family: 'Baloo', cursive;
 			display: inline-block;
 			width: 38rem;
 			background-color: #FFFFFF;
-			border-color: #FF6E91;
+			border-color: #ff914e;
 			border-style: solid;
 			border-bottom-width: 6px;
 			border-left-width: 6px;
@@ -2267,7 +2268,7 @@ font-family: 'Baloo', cursive;
 			display: inline-block;
 			width: 38rem;
 			background-color: #FFFFFF;
-			border-color: #FF6E91;
+			border-color: #ff914e;
 			border-style: solid;
 			border-top-width: 6px;
 			border-left-width: 6px;
@@ -2404,7 +2405,7 @@ font-family: 'Baloo', cursive;
 			display: inline-block;
 			width: 38rem;
 			background-color: #FFFFFF;
-			border-color: #FF6E91;
+			border-color: #ff914e;
 			border-style: solid;
 			border-left-width: 6px;
 			border-right-width: 6px;
@@ -2560,7 +2561,7 @@ font-family: 'Baloo', cursive;
 			display: inline-block;
 			width: 38rem;
 			background-color: #FFFFFF;
-			border-color: #FF6E91;
+			border-color: #ff914e;
 			border-style: solid;
 			border-left-width: 6px;
 			border-right-width: 6px;
@@ -2705,7 +2706,7 @@ font-family: 'Baloo', cursive;
 			display: inline-block;
 			width: 38rem;
 			background-color: #FFFFFF;
-			border-color: #FF6E91;
+			border-color: #ff914e;
 			border-style: solid;
 			border-bottom-width: 6px;
 			border-left-width: 6px;
@@ -2839,7 +2840,7 @@ font-family: 'Baloo', cursive;
 			display: inline-block;
 			width: 38rem;
 			background-color: #FFFFFF;
-			border-color: #FF6E91;
+			border-color: #ff914e;
 			border-style: solid;
 			border-top-width: 6px;
 			border-left-width: 6px;
@@ -2976,7 +2977,7 @@ font-family: 'Baloo', cursive;
 			display: inline-block;
 			width: 38rem;
 			background-color: #FFFFFF;
-			border-color: #FF6E91;
+			border-color: #ff914e;
 			border-style: solid;
 			border-bottom-width: 6px;
 			border-left-width: 6px;
@@ -3119,7 +3120,7 @@ font-family: 'Baloo', cursive;
 			display: inline-block;
 			width: 38rem;
 			background-color: #FFFFFF;
-			border-color: #FF6E91;
+			border-color: #ff914e;
 			border-style: solid;
 			border-width: 6px;
 			border-radius: 0rem;
@@ -3252,7 +3253,7 @@ font-family: 'Baloo', cursive;
 			display: inline-block;
 			width: 38rem;
 			background-color: #FFFFFF;
-			border-color: #FF6E91;
+			border-color: #ff914e;
 			border-style: solid;
 			border-width: 6px;
 			border-radius: 0rem;
@@ -3410,7 +3411,7 @@ font-family: 'Baloo', cursive;
 		#divider05:before 
 		{
 			width: 25rem;
-			border-top: dashed 7px #FF6E91;
+			border-top: dashed 7px #ff914e;
 			height: 7px;
 		}
 		#divider06:before 
